[gd_scene load_steps=40 format=3 uid="uid://bf8ponighrtmt"]

[ext_resource type="Script" uid="uid://b06ccs47d0dxx" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://b7wtwcs2aqdwv" path="res://Assets/Lancer/Lancer_Idle.png" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://r7tixppbn521" path="res://Assets/Lancer/Lancer_Down_Attack.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://c2at7smfieibr" path="res://Assets/Lancer/Lancer_Right_Attack.png" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://sw12ypq7rgdc" path="res://Assets/Lancer/Lancer_Run.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://dkwnwahia6n5x" path="res://Assets/Lancer/Lancer_Up_Attack.png" id="4_8erm5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("2_x3wgy")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("2_x3wgy")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("3_3smsa")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("3_3smsa")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("4_8erm5")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("4_8erm5")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("4_8erm5")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(1920, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(2240, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(2560, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(2880, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(3200, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(3520, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_6t5aa")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_6t5aa")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_6t5aa")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_6t5aa")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dp3o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}],
"loop": false,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h4iuc"]
radius = 16.0
height = 64.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x3wgy"]
a = Vector2(-64, 0)
b = Vector2(-24, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3smsa"]
a = Vector2(24, 0)
b = Vector2(64, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8erm5"]
a = Vector2(0, -40)
b = Vector2(0, -112)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_f1ek2"]
a = Vector2(0, 40)
b = Vector2(0, 96)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7dp3o")
animation = &"attack_up"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h4iuc")

[node name="left_attack_zone" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_attack_zone"]
shape = SubResource("SegmentShape2D_x3wgy")

[node name="right_attack_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_attack_zone"]
shape = SubResource("SegmentShape2D_3smsa")

[node name="up_attack_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="up_attack_zone"]
shape = SubResource("SegmentShape2D_8erm5")

[node name="bottom_attack_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_attack_zone"]
shape = SubResource("SegmentShape2D_f1ek2")

[connection signal="body_entered" from="left_attack_zone" to="." method="_on_left_attack_zone_body_entered"]
[connection signal="body_exited" from="left_attack_zone" to="." method="_on_left_attack_zone_body_exited"]
[connection signal="body_entered" from="right_attack_zone" to="." method="_on_right_attack_zone_body_entered"]
[connection signal="body_exited" from="right_attack_zone" to="." method="_on_right_attack_zone_body_exited"]
[connection signal="body_entered" from="up_attack_zone" to="." method="_on_up_attack_zone_body_entered"]
[connection signal="body_exited" from="up_attack_zone" to="." method="_on_up_attack_zone_body_exited"]
[connection signal="body_entered" from="bottom_attack_zone" to="." method="_on_bottom_attack_zone_body_entered"]
[connection signal="body_exited" from="bottom_attack_zone" to="." method="_on_bottom_attack_zone_body_exited"]
